module(
    name="hello",
    repo_name="bazel_golang_lottery_hello",
    version="1.0.0"
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.37.0")

#bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
#bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
#
#http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
#http_file(
#    name = "data_file",
#    url = "http://example.com/file",
#    sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
#)

