load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lottery_lib",
    srcs = ["hello.go"],
    importpath = "github.com/EdColeman/cuddly-chainsaw/bazel/golang/lottery/hello/golang/lottery",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "lottery",
    embed = [":lottery_lib"],
    visibility = ["//visibility:public"],
)
