module(
    name="hello",
    repo_name="bazel_golang_lottery_hello",
    version="1.0.0"
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.40.0")


go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.24.4",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

# go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
# go_deps.from_file(go_mod = "//:go.mod")

#
#http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
#http_file(
#    name = "data_file",
#    url = "http://example.com/file",
#    sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
#)
