load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "tutorial1",
    embed = [":simple_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "simple_lib",
    srcs = ["tutorial1.go"],
    importpath = "github.com/EdColeman/cuddly-chainsaw/bazel_mono_repo/golang/learning/simple",
    visibility = ["//visibility:private"],
)
