load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "stage3",
    embed = [":stage3_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "stage3_lib",
    srcs = ["print_hello.go"],
    importpath = "github.com/EdColeman/cuddly-chainsaw/bazel_mono_repo/golang/learning/stage3",
    visibility = ["//visibility:private"],
    deps = ["//golang/learning/stage3/sub1"],
)
