load("@rules_go//go:def.bzl", "go_library", "go_test", "nogo")

go_library(
    name = "sub1",
    srcs = ["sub1.go"],
    importpath = "github.com/EdColeman/cuddly-chainsaw/bazel_mono_repo/golang/learning/ex1/sub1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "sub1_test",
    size = "small",
    srcs = ["sub1_test.go"],
    embed = [":sub1"],
    rundir = ".",
)

nogo(
    name = "nogo",
)
